애님인스턴스 및 애니메이션 블루프린트 추가

--- a/Heading2/Config/DefaultEngine.ini
+++ b/Heading2/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/_MyContents/Maps/DefaultMap.DefaultMap
 EditorStartupMap=/Game/_MyContents/Maps/DefaultMap.DefaultMap
+GlobalDefaultGameMode=/Game/_MyContents/Blueprint/BP_MainGameModeBase.BP_MainGameModeBase_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
