--- a/Heading2/Config/DefaultInput.ini
+++ b/Heading2/Config/DefaultInput.ini
@@ -78,6 +78,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="EKey",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="Attack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +AxisMappings=(AxisName="UpDown",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="LeftRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="UpDown",Scale=-1.000000,Key=S)
