HPBAR위젯 추가 UI추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 ﻿Heading2/Content/ParagonKwang
+Heading2/Content/AlchemistsHouse
+Heading2/Content/EnvironmentPack2
+Heading2/Content/StarterContent
+Heading2/Content/EnvironmentPack3
