--- a/Heading2/Config/DefaultEngine.ini
+++ b/Heading2/Config/DefaultEngine.ini
@@ -1,9 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/_MyContents/Maps/DefaultMap.DefaultMap
-EditorStartupMap=/Game/_MyContents/Maps/DefaultMap.DefaultMap
+GameDefaultMap=/Game/EnvironmentPack2/Maps/Map1.Map1
+EditorStartupMap=/Game/EnvironmentPack2/Maps/Map1.Map1
 GlobalDefaultGameMode=/Game/_MyContents/Blueprint/BP_MainGameModeBase.BP_MainGameModeBase_C
+GameInstanceClass=/Script/Heading2.MainGameInstance
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
